--- a/docs/docs/mlflow-3/genai-agent.mdx
+++ b/docs/docs/mlflow-3/genai-agent.mdx
@@ -20,6 +20,7 @@ The example also highlights the ability to track interactive traces and link the
 ## Initialize OpenAI client
 
 First, we initialize an OpenAI client, use its chat completions API for answering questions, and utilize MLflow's prompt registry capability to manage and link prompts effectively.
+**As an initial step, set an active model with <APILink fn="mlflow.set_active_model" /> API to enable linking any traces generated in the app development stage to it.**
 
 ```python
 from openai import OpenAI
@@ -98,7 +99,7 @@ print(traces)
 # [3 rows x 12 columns]
 ```
 
-Check out the **Models** tab in the experiment to view the newly logged model.
+Check out the **Models** tab in the experiment to view the new logged model with name ``openai_model``.
 
 <div className="center-div" style={{ width: "100%" }}>
     ![The MLflow UI showing the logged models in an experiment](/images/mlflow-3/genai/logged_models_tab.png)
