--- a/docs/docs/tracing/tracing-schema.mdx
+++ b/docs/docs/tracing/tracing-schema.mdx
@@ -152,7 +152,7 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
       </td>
     </tr>
     <tr>
-      <td>**timestamp_ms**</td>
+      <td>**request_time**</td>
       <td>
         The time that marks the moment when the root span of the trace was
         created. This is a Unix timestamp in milliseconds.
@@ -167,7 +167,7 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
       </td>
     </tr>
     <tr>
-      <td>**execution_time_ms**</td>
+      <td>**execution_duration**</td>
       <td>
         The time that marks the moment when the call to end the trace is made.
         This is a Unix timestamp in milliseconds.
@@ -179,8 +179,8 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
       </td>
     </tr>
     <tr>
-      <td>**status**</td>
-      <td>An enumerated value that denotes the status of the trace.</td>
+      <td>**state**</td>
+      <td>An enumerated value that denotes the state of the trace.</td>
       <td>
         `TraceStatus` values are one of:
 
@@ -192,14 +192,26 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
         - **IN_PROGRESS** - The trace has
         started and is currently running. Temporary state that will update while
         spans are being logged to a trace.
-        - **TRACE_STATUS_UNSPECIFIED** -
+        - **STATE_UNSPECIFIED** -
         internal default state that should not be seen in logged traces.
       </td>
     </tr>
     <tr>
-      <td>**request_metadata**</td>
+      <td>**request_preview**</td>
+      <td>The `request_preview` property is the input data for the entire trace. The input `str` is a JSON-serialized string that contains the input data for the trace, typically the end-user request that was submitted as a call to the application.</td>
+      <td>Due to the varied structures of inputs that could go to a given application that is being instrumented by MLflow Tracing, all inputs are JSON serialized for compatibility's sake. This allows for the input data to be stored in a consistent format, regardless of the input data's structure.</td>
+      <td>This field can be truncated if it exceeds the length limit.</td>
+    </tr>
+    <tr>
+      <td>**response_preview**</td>
+      <td>The `response_preview` property is the final output data that will be returned to the caller of the invocation of the application.</td>
+      <td>Similar to the request property, this value is a JSON-serialized string to maximize compatibility of disparate formats.</td>
+      <td>This field can be truncated if it exceeds the length limit.</td>
+    </tr>
+    <tr>
+      <td>**trace_metadata**</td>
       <td>
-        The request metadata are additional key-value pairs of information that
+        The trace metadata are additional key-value pairs of information that
         are associated with the Trace, set and modified by the tracing backend.
       </td>
       <td>
@@ -221,13 +233,12 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
         after a trace has been logged to an experiment.
       </td>
     </tr>
-
   </tbody>
 </table>
 
 ## Trace Data
 
-The MLflow <APILink fn="mlflow.entities.trace_data.TraceData">`TraceData`</APILink> object is a dataclass object that holds the core of the trace data.
+The MLflow <APILink fn="mlflow.entities.trace_data.TraceData">`TraceData`</APILink> object is a `dataclass` object that holds the core of the trace data.
 This object contains the following elements:
 
 <table>
@@ -240,11 +251,6 @@ This object contains the following elements:
   </thead>
   <tbody>
     <tr>
-      <td>**request**</td>
-      <td>The `request` property is the input data for the entire trace. The input `str` is a JSON-serialized string that contains the input data for the trace, typically the end-user request that was submitted as a call to the application.</td>
-      <td>Due to the varied structures of inputs that could go to a given application that is being instrumented by MLflow Tracing, all inputs are JSON serialized for compatibility’s sake. This allows for the input data to be stored in a consistent format, regardless of the input data’s structure.</td>
-    </tr>
-    <tr>
       <td>**spans**</td>
       <td>
         {"This property is a list of "}
@@ -252,11 +258,6 @@ This object contains the following elements:
         {" objects that represent the individual steps of the trace."}
       </td>
       <td>For further information on the structure of Span objects, see the section below.</td>
-    </tr>
-    <tr>
-      <td>**response**</td>
-      <td>The response property is the final output data that will be returned to the caller of the invocation of the application.</td>
-      <td>Similar to the request property, this value is a JSON-serialized string to maximize compatibility of disparate formats.</td>
     </tr>
   </tbody>
 </table>
