--- a/docs/docs/mlflow-3/genai-agent.mdx
+++ b/docs/docs/mlflow-3/genai-agent.mdx
@@ -20,7 +20,7 @@ The example also highlights the ability to track interactive traces and link the
 ## Initialize OpenAI client
 
 First, we initialize an OpenAI client, use its chat completions API for answering questions, and utilize MLflow's prompt registry capability to manage and link prompts effectively.
-**As an initial step, set an active model with <APILink fn="mlflow.set_active_model" /> API to enable linking any traces generated in the app development stage to it.**
+**As an initial step, set an active model with <APILink fn="mlflow.set_active_model" /> API to enable linking any traces generated during app development to it.**
 
 ```python
 from openai import OpenAI
