--- a/docs/docs/auth/index.mdx
+++ b/docs/docs/auth/index.mdx
@@ -857,7 +857,7 @@ The default admin user credentials are as follows:
   <tbody>
     <tr>
       <td>`admin`</td>
-      <td>`password`</td>
+      <td>`password1234`</td>
     </tr>
   </tbody>
 </table>
