Fix typo: instumentation -> instrumentation
Signed-off-by: Dithi <heydithi88@gmail.com>

--- a/docs/docs/tracing/tracing-schema.mdx
+++ b/docs/docs/tracing/tracing-schema.mdx
@@ -384,7 +384,7 @@ The sections below provide a detailed view of the structure of a span.
       <td>
         It is recommended to provide a name for your span that is unique and
         relevant to the functionality that is being executed when using manual
-        instumentation via the client or fluent APIs. Generic names for spans or
+        instrumentation via the client or fluent APIs. Generic names for spans or
         confusing names can make it difficult to diagnose issues when reviewing
         traces.
       </td>
