--- a/docs/docs/llms/concepts/index.mdx
+++ b/docs/docs/llms/concepts/index.mdx
@@ -28,7 +28,8 @@ MLflow's GenAI data model consists of two main components:
 
 2. **`Evaluation Datasets`**: Curated collections of examples used to systematically evaluate your application, containing both high-quality and problematic interactions to help improve performance.
 
-[Learn more about the data model](data_model/index)
+
+[Learn more about the data model](data_model)
 
 ## Managing app versions
 
