--- a/docs/docs/llms/tracing/logging_traces/manual_tracing/fluent-apis.mdx
+++ b/docs/docs/llms/tracing/logging_traces/manual_tracing/fluent-apis.mdx
@@ -151,7 +151,7 @@ The following is an advanced example that uses the `output_reducer` to consolida
 
 :::tip
 
-Of course, we recommend using the [auto-tracing for OpenAI](../integrations/openai) for examples like this, which does the same job but with one-liner code. The example below is for demonstration purposes.
+Of course, we recommend using the [auto-tracing for OpenAI](../../integrations/openai) for examples like this, which does the same job but with one-liner code. The example below is for demonstration purposes.
 
 :::
 
