--- a/docs/docs/llms/tracing/overview/index.mdx
+++ b/docs/docs/llms/tracing/overview/index.mdx
@@ -26,7 +26,7 @@ MLflow Tracing provides comprehensive observability by recording:
 MLflow Tracing provides a unified experience between development and production - you instrument your application once and tracing seamlessly works the same way in both environments. 
 
 :::tip
-If you are new to the tracing or observability concepts, we recommend starting with the [Tracing 101](/tracing/overview/concept) page.
+If you are new to the tracing or observability concepts, we recommend starting with the [Tracing 101](concept) page.
 :::
 
 
@@ -196,35 +196,35 @@ openai.OpenAI().chat.completions.create(
 <CardGroup>
   <PageCard
     headerText="Get started by logging traces"
-    link="/tracing/logging_traces"
+    link="../logging_traces"
     text={[
       "Learn how to start logging traces in your LLM applications using MLflow's automatic and manual tracing capabilities.",
     ]}
   />
   <PageCard
     headerText="Learn more about the data model"
-    link="/tracing/tracing-schema"
+    link="../tracing-schema"
     text={[
       "Understand the structure and components of MLflow traces, including spans, attributes, and events.",
     ]}
   />
   <PageCard
     headerText="Query traces"
-    link="/tracing/"
+    link="../using_traces/query"
     text={[
       "Learn how to search and filter traces to analyze your LLM application's behavior.",
     ]}
   />
   <PageCard
     headerText="Visualize traces in the UI"
-    link="/tracing/"
+    link="../using_traces/ui"
     text={[
       "Explore MLflow's UI features for visualizing and analyzing your traces.",
     ]}
   />
   <PageCard
     headerText="Learn more about key features"
-    link="/tracing/"
+    link="../features"
     text={[
       "Discover MLflow Tracing's powerful features for LLM observability.",
     ]}
