clean up all broken links

--- a/docs/docs/llms/chat-model-guide/index.mdx
+++ b/docs/docs/llms/chat-model-guide/index.mdx
@@ -260,7 +260,7 @@ provider example to use any managed LLM hosting service with ease ([Amazon Bedro
     #### Not using a supported flavor
 
     If you're working with a library that is natively supported in MLflow, leveraging the built-in support for logging and loading your implementation
-    will always be easier than implementing a custom model. It is recommended to check the [supported GenAI flavors](/llms#model-packaging)
+    will always be easier than implementing a custom model. It is recommended to check the supported GenAI flavors
     to see if there is a built-in solution that will meet your use case needs in one of the many integrations that are available.
 
     #### Misinterpreting what `load_context` does
