--- a/docs/docs/llms/evaluate-monitor/eval-datasets/synthetic-data.mdx
+++ b/docs/docs/llms/evaluate-monitor/eval-datasets/synthetic-data.mdx
@@ -29,7 +29,10 @@ You can use three additional parameters to help control the generation:
 
 - `num_evals`: The total number of evaluations to generate across all of the documents. The function tries to distribute generated evals over all of your documents, taking into consideration their size. If `num_evals` is less than the number of documents, not all documents will be covered in the evaluation set.
 
-  For details about how `num_evals` is used to distribute evaluations across the documents, see [\_](#num-evals).
+  For details about how `num_evals` is used to distribute evaluations across the documents, see xx.
+
+  ## <span style={{color: "red"}}>TODO - fix link above</span>
+
 
 - `agent_description`: A task description of the agent
 - `question_guidelines`: A set of guidelines that help guide the synthetic question generation. This is a free-form string that will be used to prompt the generation. See the example below.
