--- a/docs/docs/llms/evaluate-monitor/quality/built-in-judges/index.mdx
+++ b/docs/docs/llms/evaluate-monitor/quality/built-in-judges/index.mdx
@@ -41,7 +41,7 @@ Not all judges require ground-truth labels. Judges that do not require labels ar
   - `request`, `response`, `expected_facts[]` or `expected_response`
   - Yes
 - - `relevance_to_query`
-  - [Does the response address (is it relevant to) the user’s request?](#answer-relevance)
+  - [Does the response address (is it relevant to) the user’s request?](#relevance-to-query)
   - `request`, `response`
   - No
 - - `context_sufficiency`
