--- a/docs/docs/llms/human-feedback/logging-user-feedback.mdx
+++ b/docs/docs/llms/human-feedback/logging-user-feedback.mdx
@@ -19,7 +19,7 @@ sidebar_position: 2
 
 ## <a id="provide-feedback"></a>Provide feedback on a deployed agent (experimental)
 
-When you deploy your agent with `agents.deploy()`, agent framework also creates and deploys a “feedback” model version within the same endpoint, which you can query to provide feedback on your agent application. Feedback entries appear as request rows within the [inference table](#agent-inference-tables) associated with your agent serving endpoint.
+When you deploy your agent with `agents.deploy()`, agent framework also creates and deploys a “feedback” model version within the same endpoint, which you can query to provide feedback on your agent application. Feedback entries appear as request rows within the inference table associated with your agent serving endpoint.
 
 
 Limitations of this API include:
