--- a/docs/docs/llms/prompts/evaluate.mdx
+++ b/docs/docs/llms/prompts/evaluate.mdx
@@ -11,7 +11,7 @@ import TabItem from "@theme/TabItem";
 
 # Evaluating Prompts with MLflow
 
-Combining [MLflow Prompt Registry](/prompts) with [MLflow LLM Evaluation](/llms/llm-evaluate) enables you to evaluate prompt performance across different models and datasets, and track the evaluation results in a centralized registry. You can also inspect model outputs from the **traces** logged during evaluation to understand how the model responds to different prompts.
+Combining [MLflow Prompt Registry](/llms/prompts) with [MLflow LLM Evaluation](/llms/llm-evaluate) enables you to evaluate prompt performance across different models and datasets, and track the evaluation results in a centralized registry. You can also inspect model outputs from the **traces** logged during evaluation to understand how the model responds to different prompts.
 
 
 :::tip Key Benefits of MLflow Prompt Evaluation
