--- a/docs/docs/llms/prompts/run-and-model.mdx
+++ b/docs/docs/llms/prompts/run-and-model.mdx
@@ -31,7 +31,7 @@ with mlflow.start_run():
 
 :::warning
 
-    The `prompts` parameter for associating prompts with models is only supported for GenAI flavors such as OpenAI, LangChain, LlamaIndex, DSPy, etc. Please refer to the [GenAI flavors](/llms#model-packaging) for the full list of supported flavors.
+    The `prompts` parameter for associating prompts with models is only supported for GenAI flavors such as OpenAI, LangChain, LlamaIndex, DSPy, etc. Please refer to the GenAI flavors TODO LINK for the full list of supported flavors.
 
 :::
 
@@ -39,7 +39,7 @@ with mlflow.start_run():
 
 ### 1. Create a prompt
 
-If you haven't already created a prompt, follow [this step](/prompts#1-create-a-prompt) to create a new prompt.
+If you haven't already created a prompt, follow [this step](/llms/prompts#1-create-a-prompt) to create a new prompt.
 
 
 ### 2. Define a Chain using the registered prompts
