--- a/docs/docs/llms/tracing/overview/index.mdx
+++ b/docs/docs/llms/tracing/overview/index.mdx
@@ -39,7 +39,7 @@ If you are new to the tracing or observability concepts, we recommend starting w
 
   - **🥇 Standard** - MLflow Tracing is compatible with **OpenTelemetry**, an industry-standard observability spec. You can export your trace data to various services in your existing observability stack, such as Grafana, Prometheus, Datadog, New Relic, and more.
 
-  - **🤝 Framework Support** - MLflow Tracing integrates with 15+ GenAI libraries, including OpenAI, LangChain, LlamaIndex, DSPy, and others. See the [Automatic Tracing](#automatic-tracing) section for the full list of supported libraries.
+  - **🤝 Framework Support** - MLflow Tracing integrates with 15+ GenAI libraries, including OpenAI, LangChain, LlamaIndex, DSPy, and others. See the [Automatic Tracing](../logging_traces/automatic) section for the full list of supported libraries.
 
   - **🔄 End-to-End** - MLflow is designed for managing the end-to-end machine learning lifecycle. With its model tracking and evaluation capabilities, MLflow empowers you to leverage your trace data fully.
 
@@ -105,7 +105,7 @@ Traces empowers your throughout the end-to-end lifecycle of a machine learning p
 
           These insights help you maintain optimal performance and resource utilization in your GenAI applications.
 
-          MLflow Tracing is compatible with **OpenTelemetry**, an industry-standard observability spec. You can export your trace data to various services in your existing observability stack, such as Grafana, Prometheus, Datadog, New Relic, and more. Refer to [Export Traces to Other Services](/tracing/production#opentelemetry-collector) for more details.
+          MLflow Tracing is compatible with **OpenTelemetry**, an industry-standard observability spec. You can export your trace data to various services in your existing observability stack, such as Grafana, Prometheus, Datadog, New Relic, and more. Refer to [Export Traces to Other Services](/llms/tracing/features/open-telemetry) for more details.
         </div>
         <div class="flex-item padding-md">
           ![Trace Error](/images/llms/tracing/trace-exception.gif)
