--- a/docs/docs/llms/tracing/tracing-schema.mdx
+++ b/docs/docs/llms/tracing/tracing-schema.mdx
@@ -97,7 +97,7 @@ Trace Info is a dataclass object that contains metadata about the trace. This me
 various other data that aids in retrieving and filtering traces when used with <APILink fn="mlflow.client.MlflowClient.search_traces" /> and for
 navigation of traces within the MLflow UI.
 
-To learn more about how `TraceInfo` metadata is used for searching, you can see examples [here](/tracing/api/search/#example-usage-of-search-traces).
+To learn more about how `TraceInfo` metadata is used for searching, you can see examples [here](/llms/tracing/using_traces/query).
 
 The data that is contained in the `TraceInfo` object is used to populate the trace view page within the MLflow tracking UI, as shown below.
 
